[gd_scene load_steps=46 format=3 uid="uid://c8xkbjmxthcvl"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_s88sy"]
[ext_resource type="Texture2D" uid="uid://cqk3km5v2jj5t" path="res://art/characters/player.png" id="2_cgwfd"]
[ext_resource type="PackedScene" uid="uid://cecw6b2xcismr" path="res://scenes/advanced_camera.tscn" id="3_0t7ah"]
[ext_resource type="PackedScene" uid="uid://ci5076ojxrks5" path="res://components/hitbox_component.tscn" id="4_20ije"]
[ext_resource type="PackedScene" uid="uid://c7finkmabur1a" path="res://components/health_component.tscn" id="5_rd4w3"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bkdk2"]
radius = 7.0
height = 16.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_34yxb"]
radius = 9.0
height = 20.0

[sub_resource type="Animation" id="Animation_8gwxm"]
resource_name = "Dead"
length = 2.0
step = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 24]
}

[sub_resource type="Animation" id="Animation_bsh0g"]
resource_name = "IdleEast"
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [3, 2]
}

[sub_resource type="Animation" id="Animation_5mrnj"]
resource_name = "IdleNorth"
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 0]
}

[sub_resource type="Animation" id="Animation_8imib"]
resource_name = "Idle"
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.508038),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_fn8ky"]
resource_name = "IdleWest"
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 3]
}

[sub_resource type="Animation" id="Animation_bbeob"]
resource_name = "JumpEast"

[sub_resource type="Animation" id="Animation_l462v"]
resource_name = "JumpNorth"

[sub_resource type="Animation" id="Animation_re5qp"]
resource_name = "JumpSouth"

[sub_resource type="Animation" id="Animation_t3i2d"]
resource_name = "JumpWest"

[sub_resource type="Animation" id="Animation_ryo2m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_qd11h"]
resource_name = "WalkEast"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 7, 11, 15]
}

[sub_resource type="Animation" id="Animation_6d41h"]
resource_name = "WalkNorth"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 5, 9, 13]
}

[sub_resource type="Animation" id="Animation_tj4ac"]
resource_name = "WalkSouth"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 4, 8, 12]
}

[sub_resource type="Animation" id="Animation_egdr3"]
resource_name = "WalkWest"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [2, 6, 10, 14]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y7reg"]
_data = {
"Dead": SubResource("Animation_8gwxm"),
"IdleEast": SubResource("Animation_bsh0g"),
"IdleNorth": SubResource("Animation_5mrnj"),
"IdleSouth": SubResource("Animation_8imib"),
"IdleWest": SubResource("Animation_fn8ky"),
"JumpEast": SubResource("Animation_bbeob"),
"JumpNorth": SubResource("Animation_l462v"),
"JumpSouth": SubResource("Animation_re5qp"),
"JumpWest": SubResource("Animation_t3i2d"),
"RESET": SubResource("Animation_ryo2m"),
"WalkEast": SubResource("Animation_qd11h"),
"WalkNorth": SubResource("Animation_6d41h"),
"WalkSouth": SubResource("Animation_tj4ac"),
"WalkWest": SubResource("Animation_egdr3")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2a1al"]
animation = &"Dead"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_utp1b"]
animation = &"Dead"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_oarlg"]
animation = &"Dead"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3kwu6"]
animation = &"Dead"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_g0k51"]
blend_point_0/node = SubResource("AnimationNodeAnimation_2a1al")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_utp1b")
blend_point_1/pos = Vector2(0, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_oarlg")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_3kwu6")
blend_point_3/pos = Vector2(0, -1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rtqh3"]
animation = &"IdleWest"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mw5k0"]
animation = &"IdleSouth"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mxns7"]
animation = &"IdleEast"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8flf7"]
animation = &"IdleNorth"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_l5jp6"]
blend_point_0/node = SubResource("AnimationNodeAnimation_rtqh3")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_mw5k0")
blend_point_1/pos = Vector2(0, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_mxns7")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_8flf7")
blend_point_3/pos = Vector2(0, -1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_v3ex2"]
animation = &"WalkWest"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pwgpp"]
animation = &"WalkSouth"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_k0m24"]
animation = &"WalkEast"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_imlc7"]
animation = &"WalkNorth"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_k1wrm"]
blend_point_0/node = SubResource("AnimationNodeAnimation_v3ex2")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_pwgpp")
blend_point_1/pos = Vector2(0, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_k0m24")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_imlc7")
blend_point_3/pos = Vector2(0, -1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0svd7"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gsfwa"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hb180"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_un1j3"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vnc2e"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_qek0x"]
states/Dead/node = SubResource("AnimationNodeBlendSpace2D_g0k51")
states/Dead/position = Vector2(478, 50.64)
states/End/position = Vector2(1030.5, 128)
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_l5jp6")
states/Idle/position = Vector2(332, 204.688)
states/Start/position = Vector2(110, 98.5)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_k1wrm")
states/Walk/position = Vector2(603.5, 203.469)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_0svd7"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_gsfwa"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_hb180"), "Idle", "Dead", SubResource("AnimationNodeStateMachineTransition_un1j3"), "Walk", "Dead", SubResource("AnimationNodeStateMachineTransition_vnc2e")]
graph_offset = Vector2(-160.2, -102.165)

[sub_resource type="Animation" id="Animation_u2aow"]
resource_name = "Damage"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_emryd"]
_data = {
"Damage": SubResource("Animation_u2aow")
}

[node name="Player" type="CharacterBody2D"]
y_sort_enabled = true
collision_layer = 2
script = ExtResource("1_s88sy")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_cgwfd")
hframes = 4
vframes = 7
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_bkdk2")

[node name="AdvancedCamera" parent="." instance=ExtResource("3_0t7ah")]
decay = 0.6
amplitude = 30.0

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_20ije")]
collision_layer = 2
collision_mask = 4
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CapsuleShape2D_34yxb")
debug_color = Color(0.921569, 0.262745, 0.239216, 0.419608)

[node name="HealthComponent" parent="." instance=ExtResource("5_rd4w3")]
max_health = 50

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_y7reg")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_y7reg")
}
tree_root = SubResource("AnimationNodeStateMachine_qek0x")
anim_player = NodePath("../AnimationPlayer")
parameters/Dead/blend_position = Vector2(0, 0)
parameters/Idle/blend_position = Vector2(2.08165e-12, 2.08165e-12)
parameters/Walk/blend_position = Vector2(2.08165e-12, 2.08165e-12)

[node name="AnimationDamage" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_emryd")
}

[connection signal="body_entered" from="HitboxComponent" to="HitboxComponent" method="_on_body_entered"]
[connection signal="body_exited" from="HitboxComponent" to="HitboxComponent" method="_on_body_exited"]
[connection signal="damage_taken" from="HealthComponent" to="." method="_on_health_component_damage_taken"]
[connection signal="health_depleated" from="HealthComponent" to="." method="_on_health_component_health_depleated"]
